# pyViking

./: .gitignore  LICENSE  README.md  segmentation.proto
clients/segmentation/: __init__.py  __main__.py  client_example.py  pyproject.toml  setup.py  test_service.py
docker/segmentation/: Dockerfile.dev  Dockerfile.prod  README.md  build.cmd  cleanup.ps1  run.cmd  start.sh
libraries/segmentation_grpc/: MANIFEST.in  README.md  __init__.py  _build.py  build.py  generate_grpc.py  pyproject.toml  segmentation.proto  segmentation_pb2_grpc.py  setup.py  test_modified_date.py  test_url.py
libraries/segmentation_grpc/segmentation_grpc/: __init__.py  __main__.py  _build.py  generate_grpc.py  segmentation_pb2.py
libraries/segmentation_grpc/segmentation_grpc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
servers/segmentation/: __main__.py  pyproject.toml  segmentation_service.py  setup.py
servers/segmentation_server/: pyproject.toml
servers/segmentation_server/segmentation_server/: __init__.py  __main__.py  server.py  setup.py
