[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "segmentation_grpc"
version = "0.1.0"
description = "gRPC interface for the segmentation service"
authors = [
    {name = "James Anderson"}
]
requires-python = ">=3.7"
dependencies = [
    "grpcio",
    "grpcio-tools",
    "protobuf",
]

[project.scripts]
generate-grpc = "segmentation_grpc.generate_grpc:generate_grpc_code"

[tool.setuptools]
packages = ["segmentation_grpc"]

[tool.setuptools.package-data]
segmentation_grpc = ["segmentation.proto"]