[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "segmentation_grpc"
version = "0.1.0"
description = "gRPC interface for the segmentation service"
authors = [
    {name = "James Anderson"}
]

[tool.poetry.dependencies]
python = "^3.13"

[project]
name = "segmentation_grpc"
version = "0.1.0"
description = "gRPC interface for the segmentation service"
authors = [
    {name = "James Anderson"}
]
requires-python = ">=3.13"
dependencies = [
    "grpcio",
    "grpcio-tools",
    "protobuf",
]

[project.scripts]
generate-grpc = "segmentation_grpc.generate_grpc:generate_grpc_code"

[tool.setuptools]
packages = ["segmentation_grpc"]

[tool.poetry.build]
script = "build.py"
