[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "setuptools_scm>=6.2"
]

# Standard project metadata (PEP 621)
[project]
name = "segmentation_grpc"
version = "0.1.0"
description = "gRPC interface for the segmentation service"
readme = "README.md"
authors = [
    {name = "James Anderson"}
]
requires-python = ">=3.13"
dependencies = [
    "grpcio",
    "grpcio-tools",
    "protobuf",
]

[project.scripts]
generate-grpc = "segmentation_grpc.generate_grpc:generate_grpc_code"

# Custom setuptools configuration
[tool.setuptools]
packages = ["segmentation_grpc"]
package-data = {"segmentation_grpc" = ["*.proto"]}
include-package-data = true

