[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SegmentationServer"
version = "0.1.0"
description = "Server for the segmentation service"
authors = [
    {name = "James Anderson"}
]
requires-python = ">=3.7"
dependencies = [
    "grpcio",
    "grpcio-tools",
    "protobuf",
    "numpy",
    "pillow",
    "opencv-python",
    "torch",
    "sam2",
    "segmentation_grpc",
]

[project.scripts]
segmentation-server = "SegmentationServer.__main__:main"

[tool.setuptools]
packages = ["SegmentationServer"]