[build-system]
requires = ["setuptools>=42", "wheel"]

[project]
name = "segmentation_server"
version = "0.1.0"
description = "Server for the segmentation service"
readme = "README.md"
authors = [
    {name = "James Anderson"}
]
requires-python = ">=3.13"
dependencies = [
    "grpcio",
    "grpcio-tools",
    "protobuf",
    "numpy",
    "pillow",
    "opencv-python",
    "torch",
    "sam2",
    "segmentation_grpc",
]

[project.scripts]
segmentation-server = "segmentation_server.__main__:main"

[tool.setuptools]
packages = ["segmentation_server"] 